@@ -1,3 +1,10 @@
+2005-10-03  Christian Persch  <chpe@cvs.gnome.org>
+
+	* embed/ephy-embed-shell.c: (ephy_embed_shell_dispose):
+	* src/ephy-shell.c: (ephy_shell_dispose):
+
+	Make sure we don't unref NULL objects.
+
 2005-10-02  Christian Persch  <chpe@cvs.gnome.org>
 
 	* configure.ac:
